Section 2.3 OK. Have to work on Appendix A.

--- a/name/main.tex
+++ b/name/main.tex
@@ -233,14 +233,9 @@ The Southern Australia Current System varying flow structures reduce our ability
 To compute geostrophic velocities in regions shallower than the reference depth, we apply the Helland-Hansen method \citep{Helland-Hansen1934,Fomin1964}. This method states velocities at the bottom of a land portion shallower than the reference depth are zero. This method and Ekman drift calculation are set out in \ref{Helland-Hansen method}. A drawback of the Helland-Hansen method is that it produces unphysical vertical flows across the sea bottom over the margin, which introduces error in three-dimensional transport budgets. To eliminate this deficiency, and obtain a three-dimensional transport budget that closes to computer precision, we apply the Zero-Divergence method described in \citet{Furue2017} and here in \ref{Zero-divergence method}.
 
 \subsection{SBC and FC definition} \label{SBC and FC definition}
-To calculate the Southern Australia Current System transport budgets we define two control volumes, one surrounding the SBC and the other surrounding the FC\@. These boundaries are defined by visually inspecting meridional sections in CARS. We then apply the same boundaries to the mean field in MOM01 to keep consistent volumes in our calculations. 
+To calculate the Southern Australia Current System transport budgets we define two control volumes, one around the SBC and the other around the FC\@. These boundaries are defined by visually inspecting meridional sections in CARS. We then apply the same boundaries in MOM01 to keep consistent volumes in our calculations. 
 
-We first inspect meridional sections at the locations shown in Fig.\,\ref{f01_fig1_} (black dashed lines) to find the vertical structure of the currents and their position relative to the margin (Fig.\,\ref{f02_fig1_}a-h). The reader can also compare the CARS sections with the MOM01 sections which use the full model velocity (Fig.\,\ref{f02_fig1_}i-p). Since the orientation of the coastline varies as the currents progress zonally, we consider both zonal and meridional flow components to help identify the currents. Therefore, in Fig.\,\ref{f02_fig1_} we present the zonal component as shading and the meridional component as contours. The longshore currents can be clearly identified in the zonal velocity up until Cape Carnot at \ang{136}E (Fig.\,\ref{f02_fig1_}e). Further east, the meridional component of flow helps to identify the currents.
-
-While the SBC are relatively narrow, thin and well contained along the shelf break, the FC is wider and thicker with a core position that varies more than the SBC\@. We define here an \enquote{offshore-FC}
-south of the SBC, centered at the surface and extending downward as deep as \SI{2000}{\meter} (Fig.\,\ref{f02_fig1_}b,c,d,f,h), and
-a \enquote{slope-FC} at sub-surface level centered at \SI{600}{\meter} underneath the SBC and adjacent to the slope (Fig.\,\ref{f02_fig1_}b,c,e,g). The slope-FC forms a clearer separate core from the offshore-FC in the numerical model (Fig.\,\ref{f02_fig1_}i-o).
-Hence, the SBC and FC volumes can be defined by separating the water column into an upper layer that contains the whole SBC and the upper offshore-FC, and a lower layer that contains the slope-FC and the lower offshore-FC\@. The horizontal interface $z\sub{int}$ between the upper and lower layers is therefore the SBC bottom boundary. We choose $z\sub{int} = \SI{-250}{\meter}$ (Fig.\,\ref{f02_fig1_}, blue line) as this level is generally very close to, or within, the \num{0} to \SI{4}{\centi\meter\per\second} eastward velocity range beneath the SBC.
+We first inspect meridional sections at the locations shown in Fig.\,\ref{f01_fig1_} (black dashed lines) to find the currents vertical structure position relative to the margin (Fig.\,\ref{f02_fig1_}a-h). The reader can also compare CARS sections with MOM01 sections, which use full model velocity (Fig.\,\ref{f02_fig1_}i-p). Since the coastline orientation varies as the currents progress zonally, we consider both zonal and meridional flow components to help identify the currents. Therefore, in Fig.\,\ref{f02_fig1_} we present the zonal component as shading and the meridional component as contours. The longshore currents can be clearly identified in the zonal velocity up until Cape Carnot at \ang{136}E (Fig.\,\ref{f02_fig1_}e). Further east, the meridional velocity helps to identify the currents.
 %
 \begin{figure}[p]
 \centering
@@ -251,9 +246,11 @@ Hence, the SBC and FC volumes can be defined by separating the water column into
   Meridional sections along southern Australia of (a-h) geostrophic velocities in CARS and (i-p) actual velocities in MOM01. Zonal geostrophic velocities $u\sub{g}$ in CARS (actual zonal velocities in MOM01) in \si{\centi\meter\per\second} (shadings, non-monotonic scale) and meridional geostrophic velocities $v\sub{g}$ in CARS (actual meridional velocities in MOM01) in \si{\centi\meter\per\second} (contours, every \SI{2.5}{\centi\meter\per\second}, thick solid lines show positive values, thick dashed lines show negative values, thin solid lines show zero contour). Boundaries of the SBC and FC as follows: $y\sub{CC}$ (green) is the SBC north boundary; $z\sub{int}$ (blue) is the SBC bottom boundary and the FC top boundary; $y\sub{int}$ (red) is the SBC south boundary and the FC north boundary; $y\sub{OF}$ (magenta) is the FC south boundary; $z\sub{ref}$ (thick cyan) is the FC bottom closed boundary at the reference depth.}
 \end{figure}
 
+While the SBC are relatively narrow, thin and well contained along the shelf break, the FC is wider and thicker, with a varying core position. We define here an \enquote{offshore-FC}
+south of the SBC, centered at the surface and extending downward to \SI{2000}{\meter} (Fig.\,\ref{f02_fig1_}b,c,d,f,h), and
+a \enquote{slope-FC} at sub-surface centered at \SI{600}{\meter} underneath the SBC and adjacent to the slope (Fig.\,\ref{f02_fig1_}b,c,e,g). The slope-FC forms a clearer separate core from the offshore-FC in MOM01 (Fig.\,\ref{f02_fig1_}i-o).
+Hence, the SBC and FC volumes can be defined by separating the water column into an upper layer containing the SBC and upper offshore-FC, and a lower layer containing the slope-FC and lower offshore-FC\@. The horizontal interface $z\sub{int}$ between the upper and lower layers is therefore the SBC bottom boundary. We choose $z\sub{int} = \SI{-250}{\meter}$ (Fig.\,\ref{f02_fig1_}, blue line) as this level is generally very close to, or within, the \num{0} to \SI{4}{\centi\meter\per\second} eastward velocity range at the SBC base. $\Vec{V\sub{up}}$ (Fig.\,\ref{f03_fig1_}a) is the integral of geostrophic velocities from the surface to $z\sub{int}$ plus Ekman drift and $\Vec{V\sub{low}}$ (Fig.\,\ref{f03_fig1_}b) is the integral of geostrophic velocities from $z\sub{int}$ to $z\sub{ref}$; hence
 
-We define the northern and southern boundaries of the SBC and FC by inspecting maps of CARS velocities integrated in the upper layer $\Vec{V\sub{up}}$ (Fig.\,\ref{f03_fig1_}a) and velocities integrated in the lower layer $\Vec{V\sub{low}}$ (Fig.\,\ref{f03_fig1_}b). $\Vec{V\sub{up}}$ is the integral of geostrophic velocities from the surface to $z\sub{int}$ plus the Ekman drift and $\Vec{V\sub{low}}$ is the integral of geostrophic velocities from $z\sub{int}$ to $z\sub{ref}$. These are depth integrated velocity fields which can be regarded as transports per unit width in \si{\square\meter\per\second},
-%
 \begin{equation} \label{eq:1}
 \Vec{V\sub{up}}(x,y) = \int_{z\sub{int}}^{0}\Vec{v\sub{g}}\ dz + \Vec{V\sub{ek}}
 \end{equation}
@@ -262,7 +259,7 @@ We define the northern and southern boundaries of the SBC and FC by inspecting m
 \Vec{V\sub{low}}(x,y) = \int_{z\sub{ref}}^{z\sub{int}}\Vec{v\sub{g}}\ dz.
 \end{equation}
 %
-Note that $\Vec{V\sub{up}}$ and $\Vec{V\sub{low}}$ from MOM01 are shown in Fig.\,\ref{f03_fig1_}c,d. In this case we have used the full model velocity in equations \ref{eq:1} and \ref{eq:2} rather than the sum of geostrophic and Ekman components from the model. A comparison of the MOM01 full model velocity with the MOM01 geostrophic and Ekman velocity shows that the full model velocities in the SBC and FC are generally stronger than the sum of the geostrophic and Ekman components (not shown). Therefore the MOM01 full model longshore transport for the SBC and the FC will be stronger than the MOM01 geostrophic longshore transport (see Section\,\ref{Southern Australia Current System Transport Budget}).
+These depth integrated velocity fields produce transports per unit width in \si{\square\meter\per\second}. Note that $\Vec{V\sub{up}}$ and $\Vec{V\sub{low}}$ from MOM01 are shown in Fig.\,\ref{f03_fig1_}c,d. In this case we simply used actual model velocity integrated in the upper and lower layers, rather than the sum of geostrophic and Ekman velocities. A comparison of MOM01 actual velocity with MOM01 geostrophic and Ekman velocity shows that the SBC and FC actual model velocities are generally stronger than the sum of the geostrophic and Ekman velocities (\ref{Geostrophic velocity validation}). Therefore the MOM01 actual SBC and FC transport will be stronger than MOM01 geostrophic transport (see Section\,\ref{Southern Australia Current System Transport Budget}).
 %
 \begin{figure}[p]
 \centering
@@ -273,7 +270,7 @@ Note that $\Vec{V\sub{up}}$ and $\Vec{V\sub{low}}$ from MOM01 are shown in Fig.\
   Depth integrated (a,b) geostrophic velocities in CARS and (c,d) actual velocities in MOM01, showing the velocity field (directional plot) and the zonal component (shadings, non-monotonic scale) in \si{\square\meter\per\second} (ie. transport per unit width). The fields are integrated from (a,c) the surface to \SI{-250}{\meter} and from (b,d) \SI{-250}{\meter} to \SI{-2000}{\meter}. In CARS, (a) shows the sum of geostrophic velocities and Ekman velocities and (b) shows geostrophic velocities only. Boundaries of the SBC and FC as follows: $y\sub{CC}$ (green with black outline) is the SBC north boundary; $y\sub{int}$ (red with black outline) is the SBC south boundary and the FC north boundary; $y\sub{OF}$ (magenta with black outline) is the FC south boundary; $z\sub{int}$ area is the surface bounded by $y\sub{int}$ at south and the slope at north.}
 \end{figure}
 
-We present in Fig.\,\ref{Diagram_V3} a three-dimensional schematic diagram of the Southern Australia Current System to understand the exchanges in the transport budget. This schematic illustrates the transport of the eastward SBC ($U_{SBC}$ thick light blue arrow) and the westward FC ($U_{FC}$ thick light yellow arrows), which includes the slope-FC below the SBC, and the upper and lower parts of the offshore-FC. Inward/outward transports into or out of the longshore SBC or FC are indicated as thin coloured arrows. Here, an increase in SBC transport can be supplied from three sources: southward horizontal inflow from the coastal currents ($V_{CC}$ thin green arrows), northward horizontal inflow from the offshore-FC near the surface ($V_{SBC}$ thin red arrows), and upwelling from the slope-FC ($W_{SBC}$ thin blue arrows). Similarly, an increase in FC transport can be supplied by three sources: southward horizontal inflow from the SBC into the surface FC ($V_{FC}$ thin red arrows), downwelling from the SBC into the slope-FC ($W_{FC}$ thin blue arrows), northward flow from the ocean interior into the upper or lower part of the offshore-FC ($V_{OF}$ thin magenta arrows).
+We present in Fig.\,\ref{Diagram_V3} a Southern Australia Current System three-dimensional schematic diagram to understand transport budget exchanges. This schematic illustrates the SBC eastward transport ($U_{SBC}$ thick light blue arrow) and FC westward transport ($U_{FC}$ thick light yellow arrows), which includes the slope-FC below the SBC, and the offshore-FC upper and lower parts. Inward/outward transports into or out of the SBC or FC are indicated as thin coloured arrows. Here, an increase in SBC transport can be supplied from three sources: southward coastal currents inflows ($V_{CC}$ thin green arrows), northward upper offshore-FC inflows ($V_{SBC}$ thin red arrows), and slope-FC upwelling flows ($W_{SBC}$ thin blue arrows). Similarly, an increase in FC transport can be supplied by three sources: southward SBC inflows into the upper offshore-FC ($V_{FC}$ thin red arrows), SBC downwelling flows into the slope-FC ($W_{FC}$ thin blue arrows), northward ocean interior onshore flows into the offshore-FC ($V_{OF}$ thin magenta arrows).
 %
 \begin{figure}[hbp]
 \centering
@@ -281,19 +278,12 @@ We present in Fig.\,\ref{Diagram_V3} a three-dimensional schematic diagram of th
 [width=\textwidth, height=0.89\textheight, keepaspectratio]
 {Diagram_V3.pdf}
 \caption{\label{Diagram_V3}%
-  Southern Australia Current System transport budget schematics. The SBC transport is shown as a thick light blue arrow, the offshore-FC transport and the slope-FC as thick light yellow arrows. The shallow coastal currents are shown as a black two-ways arrow. The inward/outward transports into/out of the SBC and FC are shown as thin coloured arrows. There are four of such exchanges: the horizontal transport between the coastal currents and the SBC (green arrows), the horizontal transport between the SBC and the offshore-FC in the upper layer (red arrows), the vertical transport between the SBC and the slope-FC (blue arrows) and the horizontal transport from the onshore flows into all the offshore-FC (magenta arrows).}
+  Southern Australia Current System transport budget schematics. The SBC transport is shown as a thick light blue arrow, the offshore-FC and slope-FC transports as thick light yellow arrows. The shallow coastal currents are shown as a black two-ways arrow. The inward/outward transports into/out of the SBC and FC are shown as thin coloured arrows. The budget includes four transport exchanges: horizontal exchange between coastal currents and SBC (green arrows), horizontal exchange between SBC and upper offshore-FC (red arrows), vertical exchange between SBC and slope-FC (blue arrows) and horizontal exchange between ocean interior onshore flows and offshore-FC (magenta arrows).}
 \end{figure}
 
-The boundaries forming the control volume around the SBC and around the FC are shown in the meridional sections of velocities (Fig.\,\ref{f02_fig1_}) and maps of depth integrated velocities (Fig.\,\ref{f03_fig1_}). The SBC receive contributions from the coastal currents (Fig.\,\ref{Diagram_V3}, green arrows) through a vertical face on the shallow shelf $y\sub{CC}$ (Figs.\,\ref{f02_fig1_}\,and\,\ref{f03_fig1_}, green line). They also undergo exchanges with the FC horizontally (Fig.\,\ref{Diagram_V3}, red arrows) through the vertical face $y\sub{int}$ (Figs.\,\ref{f02_fig1_}\,and\,\ref{f03_fig1_}, red line) to the south of the SBC, and vertically (Fig.\,\ref{Diagram_V3}, blue arrows) through $z\sub{int}$ (Fig.\,\ref{f02_fig1_}, blue line) at the bottom of the SBC\@. The FC undergoes equal but opposite exchanges with the SBC through $y\sub{int}$ and $z\sub{int}$\@. The FC also receives contributions from the ocean interior onshore flows (Fig.\,\ref{Diagram_V3}, magenta arrows) through a vertical face $y\sub{OF}$ (Figs.\,\ref{f02_fig1_}\,and\,\ref{f03_fig1_}, magenta line) to the south of the FC over the depth range 0 to \SI{2000}{\meter}. The onshore flows represent the northward, deep-reaching Sverdrup transport and re-circulation from the Antarctic Circumpolar Current described in Section\,\ref{The Deep-Ocean Circulation}.
-Note that there is no vertical flow across the bottom of the FC as this boundary is at the reference depth $z\sub{ref}$ (Fig.\,\ref{f02_fig1_}, cyan line).
+The SBC and FC control volume boundaries are shown in meridional sections of velocities (Fig.\,\ref{f02_fig1_}) and maps of depth integrated velocities (Fig.\,\ref{f03_fig1_}). Here the boundaries colour match up with transport exchange illustrations in Fig.\,\ref{Diagram_V3}. Note there is no vertical flow across the FC bottom as this boundary is at the reference depth $z\sub{ref}$ (Fig.\,\ref{f02_fig1_}, cyan line). Details of SBC and FC lateral boundaries definition are set out in \ref{SBC and FC lateral boundary definition}.
 
-Since the SBC and FC are strongly topographically controlled, we define their northern and southern boundaries by working along two isobaths: one that best follows the SBC and another one that best follows the FC\@. In the upper layer (Fig.\,\ref{f03_fig1_}a), the SBC's northern (southern) boundary is defined as some degrees north (south) of their isobath depending on the current's cross-shore width. The FC's northern boundary is defined as the SBC's southern boundary in the upper layer and as the continental slope in the lower layer (Fig.\,\ref{f03_fig1_}b). The FC's southern boundary is defined as some degrees south of its isobath depending on the current's seaward extent. 
-
-Since the shelf orientation varies, we increase the distance between the SBC's northern and southern boundaries when the shelf is more slanted to ensure the SBC are fully captured. West of Portland, we select the \SIadj{700}{\meter} isobath for the SBC and define $y\sub{CC}$ to be 3/8\dg~to the north and $y\sub{int}$ to be 3/8\dg~to the south. East of Portland, where the shelf break is meridional, we define $y\sub{CC}$ to be 1/2\dg~to the north and $y\sub{int}$ to be 3/4\dg~to the south of the \SIadj{700}{\meter} isobath. South of Tasmania, where the coastline is zonal, $y\sub{int}$ is 3/8\dg~to the south of the isobath again.
-We remove $y\sub{CC}$ where the shallow shelf is narrow and the coastal currents are insignificant, that is anywhere outside the Great Australian Bight, the Bass Strait, the Gulfs region north of Cape Jaffa. Finally, we define the FC's southern boundary $y\sub{OF}$ by following the \SIadj{2000}{\meter} isobath. West of Portland $y\sub{OF}$ is set to be 3/2\dg~south of this isobath. Elsewhere, it is set to be 7/4\dg~south. South of Tasmania, the boundary is manually adjusted to lie at \ang{45.5}S.
-The green, red and magenta curves in Fig.\,\ref{f03_fig1_} are $y\sub{CC}$, $y\sub{int}$ and $y\sub{OF}$ as defined above.
-
-We note that MOM01 shows continuous SBC that are well incorporated into the SBC control volume (Fig.\,\ref{f03_fig1_}c). Even though CARS is a long-term climatology, it still includes some coastal eddy-like ``noise'' in the region (Fig.\,\ref{f03_fig1_}a), which is likely due to the superposition of eddies recorded at different times. Recently, \citet{Oke2018} found that the shelf off the Great Australian Bight is rich in mesoscale eddies with surface-intensified currents coherent over the water column. The eddies, which are hypothetically due to the horizontal shear associated with the SBC, are most energetic when the SBC start to seasonally weaken. In MOM01, the synoptic structure of eddies, particularly in the Leeuwin Current Extension region, is evident on transient timescales (not shown). Defining fixed boundaries around the SBC is, however, adequate, because the long-term mean boundary circulation is mostly dominated by the geostrophic flow. The SBC's jet like shape is maintained by the southward propagation of pressure anomalies coming from the Leeuwin Current System and turning eastward along the southern coast of Australia \citep{Middleton2007, Ridgway2015}. In winter, the currents are reinforced due to intensification of westerly winds and increased onshore Ekman drift \citep{Ridgway2004}. Hence, in our fixed boundary definition for the SBC, any eddies and eddy-like meandering flows crossing the boundaries will be captured as an inflow or outflow into the currents. \citet{Furue2017} also applied fixed boundaries for the Leeuwin Current System, because the Leeuwin Current, which co-exists with eddies, is also a jet-like flow.
+We note MOM01 shows continuous SBC well incorporated into the SBC control volume (Fig.\,\ref{f03_fig1_}c). Even though CARS is a long-term climatology, it still includes some coastal eddy-like ``noise'' in the region (Fig.\,\ref{f03_fig1_}a), which is likely due to the superposition of eddies recorded at different times. Recently, \citet{Oke2018} found that the Great Australian Bight is rich in mesoscale eddies with surface-intensified currents coherent over the water column. The eddies, which are hypothetically due to the horizontal shear associated with the SBC, are most energetic when the SBC seasonally weaken. In MOM01, the eddies synoptic structure, particularly in the Leeuwin Current Extension region, is evident on transient timescales (not shown). Defining fixed boundaries around the SBC is, however, adequate, because the long-term mean boundary circulation is mostly dominated by geostrophic flows. The SBC's jet like shape is maintained by southward propagating pressure anomalies from the Leeuwin Current System. These pressure anomalies turn eastward along southern Australia \citep{Middleton2007, Ridgway2015}. In winter, the currents are reinforced due to westerly winds intensification and increased onshore Ekman drift \citep{Ridgway2004}. In our fixed boundary SBC definition, any eddies and eddy-like meandering flows crossing a boundary will be captured as an inflow or outflow into the currents. \citet{Furue2017} also applied fixed boundaries for the Leeuwin Current System, because the Leeuwin Current, which co-exists with eddies, is also a jet-like flow.
 
 \subsection{Transport budget derivation} \label{Transport budget derivation}
 We calculate the local zonal transport within these volumes,
@@ -802,6 +792,12 @@ We solve the above equation by setting a no-flow condition on $\Vec{V\sub{d}}$ e
 %
 where $\nabla\cdot\Vec{V}=\nabla\cdot(\int_{z\sub{HH}}^{0}\Vec{v\sub{g}}\ dz + \Vec{V\sub{ek}})=0$ everywhere including over the continental shelf and slope.
 
+\section{SBC and FC lateral boundary definition} \label{SBC and FC lateral boundary definition}
+Since the SBC and FC are strongly topographically controlled, we define their northern and southern boundaries by working along two isobaths: one that best follows the SBC and another one that best follows the FC\@. In the upper layer (Fig.\,\ref{f03_fig1_}a), the SBC's northern (southern) boundary is defined as some degrees north (south) of their isobath depending on the current's cross-shore width. The FC's northern boundary is defined as the SBC's southern boundary in the upper layer and as the continental slope in the lower layer (Fig.\,\ref{f03_fig1_}b). The FC's southern boundary is defined as some degrees south of its isobath depending on the current's seaward extent. 
+
+Since the shelf orientation varies, we increase the distance between the SBC's northern and southern boundaries when the shelf is more slanted to ensure the SBC are fully captured. West of Portland, we select the \SIadj{700}{\meter} isobath for the SBC and define $y\sub{CC}$ to be 3/8\dg~to the north and $y\sub{int}$ to be 3/8\dg~to the south. East of Portland, where the shelf break is meridional, we define $y\sub{CC}$ to be 1/2\dg~to the north and $y\sub{int}$ to be 3/4\dg~to the south of the \SIadj{700}{\meter} isobath. South of Tasmania, where the coastline is zonal, $y\sub{int}$ is 3/8\dg~to the south of the isobath again.
+We remove $y\sub{CC}$ where the shallow shelf is narrow and the coastal currents are insignificant, that is anywhere outside the Great Australian Bight, the Bass Strait, the Gulfs region north of Cape Jaffa. Finally, we define the FC's southern boundary $y\sub{OF}$ by following the \SIadj{2000}{\meter} isobath. West of Portland $y\sub{OF}$ is set to be 3/2\dg~south of this isobath. Elsewhere, it is set to be 7/4\dg~south. South of Tasmania, the boundary is manually adjusted to lie at \ang{45.5}S.
+The green, red and magenta curves in Fig.\,\ref{f03_fig1_} are $y\sub{CC}$, $y\sub{int}$ and $y\sub{OF}$ as defined above.
 
 
 \section{On the definition of longshore transport} \label{Reasoning for defining the SBC transport and the FC transport from their zonal transport}
