--- a/name/main.tex
+++ b/name/main.tex
@@ -368,31 +368,18 @@ This section is divided into three subsections. Firstly, we describe the Souther
 To describe the system structure, we identify the main current features in velocity sections (Section~\ref{Shelf meridional sections}) and in depth integrated velocity maps (Section~\ref{Depth-integrated velocity maps}). In these two subsections we provide enhanced confidence in our findings by comparing the observation-based product CARS with the model data from MOM01. Finally, we examine vertical flows over the shelf MOM01 (Section~\ref{Vertical flows in MOM01}).
 
 \subsubsection{Shelf meridional sections}\label{Shelf meridional sections}
-From Cape Leeuwin to Pasley (the two westernmost sections, Fig.\,\ref{f02_fig1_}a,b,i,j), the Leeuwin Current Extension weakens in both CARS and MOM01. Estimates from \citet{Cresswell2004} and \citet{Cresswell1993} also show a stronger Leeuwin Current Extension and more intense eddies near Cape Leeuwin. From the west Great Australian Bight through to King Island (the following five sections, Fig.\,\ref{f02_fig1_}c-g,k-o), the South Australian Current and the Zeehan Current are generally weaker in CARS and MOM01. MOM01 helps identify the current structure in some sections where it is not represented in CARS (e.g. Cape Carnot and Portland sections). Not much is know on the South Australian Current, apart that it is weaker than the Leeuwin Current Extension \citep{Middleton2007} and that it is altered by coastal runoff from the Bight \citep{Rochford1986}. Off South East Cape (easternmost section, Fig.\,\ref{f02_fig1_}h,p), the Zeehan Current intensifies in CARS and MOM01, which is consistent with \citet{Oliver2016,Oliver2018b} who found a strong current there continuing over the eastern Tasmanian shelf.
+From Cape Leeuwin to Pasley (the two westernmost sections, Fig.\,\ref{f02_fig1_}a,b,i,j), the Leeuwin Current Extension weakens in both CARS and MOM01. Estimates from \citet{Cresswell2004} and \citet{Cresswell1993} also show a stronger Leeuwin Current Extension and more intense eddies near Cape Leeuwin. From the west Great Australian Bight through to King Island (the following five sections, Fig.\,\ref{f02_fig1_}c-g,k-o), the South Australian Current and the Zeehan Current are generally weaker in CARS and MOM01. MOM01 helps identify the current structure in some sections where it is not represented in CARS (e.g. Cape Carnot and Portland sections). Not much is know on the South Australian Current, apart that it is weaker than the Leeuwin Current Extension \citep{Middleton2007} and that it is altered by coastal runoff from the Bight \citep{Rochford1986}. Off South East Cape (easternmost section, Fig.\,\ref{f02_fig1_}h,p), the Zeehan Current intensifies in CARS and MOM01, which is consistent with \citet{Oliver2016,Oliver2018b} who found a strong current there continuing over the eastern Tasmanian shelf. Overall, the SBC are strongest at the western and eastern domain ends (Cape Leeuwin and South East Cape) where they reach mean speed up to \SI{20}{\centi\meter\per\second}.
 
-Near South East Cape the FC includes the strong Tasman Leakage, seen as shown the deep-reaching, wide and strong south-westward current in Fig.\,\ref{f02_fig1_}h,p.
-The FC reaches westward speeds over \SI{10}{\centi\meter\per\second} with a surface maximum in CARS (Fig.\,\ref{f02_fig1_}h) and most of the flow in the offshore-FC, and a subsurface maximum in MOM01 centered at \SI{600}{\meter} depth (Fig.\,\ref{f02_fig1_}p) with much of the flow in the slope-FC\@. As noted in Methodology Section~\ref{SBC and FC definition} there is a flow structure distinction between the offshore-FC and the slope-FC which we analyse here.
+Since the hydrographic observations fed into CARS are spatially and temporally non-uniform (see \citeauthor{Ridgway2002} \citeyear{Ridgway2002} discussion in Section\,\ref{Datasets}), a CARS versus MOM01 comparison is essential to ensure the current structure and speed represented in CARS is robust. Here, the general agreement between CARS and MOM01 suggests that the topography-adapted interpolation method applied in CARS is suitable to analyse narrow boundary currents at high-resolution. This agreement is impressive given that hydrographic observations over the shallow shelf do not include Argo data, which does not sample in coastal waters shallower than \SI{2000}{\meter}. 
 
-The slanted FC, along the slanted coast off King island, Portland, Cape Carnot and eastern Great Australian Bight sections, strengthens moving westward in both CARS and MOM01 from \num{0.5} to approximately \SI{5}{\centi\meter\per\second}. In CARS the flow is first a slope-FC off King island (Fig.\,\ref{f02_fig1_}g) and then a mixture of a slope and offshore-FC off Portland and Cape Carnot (Fig.\,\ref{f02_fig1_}e,f). Off the Great Australian Bight (Fig.\,\ref{f02_fig1_}d) the flow is clearly an offshore-FC and there is no slope-FC\@.
-MOM01 shows a clear slope-FC in all slanted coast sections (Fig.\,\ref{f02_fig1_}l--o).
-Off the east Great Australian Bight section (Fig.\,\ref{f02_fig1_}d) there is a ``detached'' offshore-FC perhaps due to a gentle continental slope there.
-Our slope-FC velocity range in CARS and MOM01 agrees well with \citepos{Middleton2007} records (\num{3}--\SI{7}{\centi\meter\per\second}). Also, their FC depth range estimate (\num{500}--\SI{1000}{\meter}) is within reasonable agreement to our slope-FC's depth range which sits approximately around \SI{600}{\meter}.
+We next identify the FC found offshore and underneath the SBC. Offshore South East Cape, we consider the strong, deep-reaching westward flow to be the Tasman Leakage, following \citepos{Speich2002,vanSebille2012,vanSebille2014} description. We discuss the discontinuity between the Tasman Leakage and FC later, when we analyse velocity maps. Here, we analyse the flow distinction between the slope-FC and offshore-FC along the slanted and the zonal shelf.
 
-The zonal FC, along the zonal coast of the western Great Australian Bight, Cape Pasley and Cape Leeuwin, generally consists of both the offshore and slope-FC in CARS (Fig.\,\ref{f02_fig1_}a--c) and MOM01 (Fig.\,\ref{f02_fig1_}i--k). In these sections, both FC components increase moving west from \num{2.5} up to \SI{10}{\centi\meter\per\second} and to more than \SI{20}{\centi\meter\per\second} near Albany (not shown) which agrees well with FC speed records from \citet{Cresswell1993}. However, in CARS at Cape Leeuwin (Fig.\,\ref{f02_fig1_}a) the FC weakens and splits producing a westward flow offshore of the FC, whereas this offshore flow is eastward in MOM01 (Fig.\,\ref{f02_fig1_}i and~\ref{f03_fig1_}a).
-In MOM01, this vertically coherent eastward jet is the southern arm of the anti-cyclonic Albany High (\citeauthor{Middleton2003} \citeyear{Middleton2003}, \citeauthor{Middleton2007} \citeyear{Middleton2007}, \citeauthor{McCartney2007} \citeyear{McCartney2007}, see Introduction Section~\ref{The Deep-Ocean Circulation}) clearly visible off Cape Leeuwin and Cape Pasley (Fig.\,\ref{f02_fig1_}i,j) and also near the surface in the Bight sections (Fig.\,\ref{f02_fig1_}k,l).
-The CARS field also includes this eastward flow (Fig.\,\ref{f02_fig1_}b) although it is somewhat less coherent (Figs.\,\ref{f03_fig1_}a and~\ref{f03_fig1_}b) and interspersed with regions of westward flow.
+The slope-FC is located around \SI{600}{\meter} and found in most sections along the slanted shelf (from Cape Carnot to King Island) and the zonal shelf (from Cape Leeuwin to western Bight). The slope-FC also intensifies to the west towards Cape Leeuwin. Generally, the CARS and MOM01 slope-FC agrees well with \citepos{Middleton2007} velocity records (\num{3}--\SI{7}{\centi\meter\per\second}) and depth range estimates (\num{500}--\SI{1000}{\meter}). At the eastern Bight, the only section with a gentle slope, the slope-FC is absent in CARS and weakest in MOM01. This suggests that a zonal shelf and a steep slope may play a role in maintaining a strong slope-FC. 
 
+The offshore-FC also intensifies to the west towards Cape Leeuwin. The offshore-FC is either weaker or detached from the slope-FC where the shelf slant is strong (Portland and King island sections) and where the slope is gentle (eastern Bight section). While the shelf orientation and slope steepness may play a role in maintaining these FC components, the detachment between the slope-FC and the offshore-FC may indicate they are independent features occasionally merging and separating as the topography varies. Overall, the FC is strongest at Cape Pasley and Cape Leeuwin where it reaches mean speed up to \SI{10}{\centi\meter\per\second}, which agrees well with FC speed records from \citet{Cresswell1993}.
 
-Overall, the SBC are strongest at the western and eastern domain ends (Cape Leeuwin and South East Cape) where they reach mean speed up to \SI{20}{\centi\meter\per\second}. The general agreement between CARS and MOM01 suggests that the interpolation method in CARS is suitable to analyse narrow boundary currents at high-resolution. The present CARS should be analysed in combination with a high resolution model
-
-
-To summarise this analysis, our sections of annual-mean CARS and MOM1 were generally in good agreement except for some notable differences. In our selected sections, the mean SBC are continuously eastward in MOM01 whereas the South Australian Current reversed at Cape Carnot in CARS. The annual-mean SBC were weaker in the model than in the observations but the 5-days average MOM01 SBC agreed well with instantaneous measurements reported in the literature. Our choice of $z\sub{int} =$ -250\si{\meter} to define the bottom of the SBC was well suited to the current structure in the CARS and MOM01 fields, and was within the \num{200} to \SI{300}{\meter} range reported in the literature.
-The maximum mean speed of the SBC is about
-\SI{20}{\centi\meter\per\second} and
-the SBC strength varies moving eastward: the Leeuwin Current Extension decreases, the South Australian Current is stable, and the Zeehan Current increases.
-The FC's slope and offshore components are
-found both in CARS and MOM01. Along the slanted coast, the slope-FC is centered around \SI{600}{\meter} and there is no, or a very weak, offshore-FC in MOM01, while CARS has both FC components and the slope-FC is surface intensified. In both datasets, the offshore-FC and the slope-FC co-exist along the zonal coast. In general, the FC increases to the west gaining in size and intensity, except off Cape Leeuwin in CARS where it splits offshore and weakens. In CARS and particularly in MOM01, a deep-reaching eastward jet exists south of the FC in the zonal sector.
-
+One noticeable difference between CARS and MOM01 is at the Cape Leeuwin section. Here, in CARS, the FC weakens and splits producing another westward flow further offshore. In MOM01, this further offshore flow is eastward. 
+In the next sub-Section, we identify this vertically coherent eastward jet as the southern arm of the anti-cyclonic Albany High (\citeauthor{Middleton2003} \citeyear{Middleton2003}, \citeauthor{Middleton2007} \citeyear{Middleton2007}, \citeauthor{McCartney2007} \citeyear{McCartney2007}) clearly visible off Cape Leeuwin and Pasley in MOM01 (and, off Cape Pasley in CARS too).
 
 \subsubsection{Depth-integrated velocity maps}\label{Depth-integrated velocity maps}
 Maps of depth-integrated velocity allow the horizontal structure of the currents to be examined (Fig.\,\ref{f03_fig1_}). In CARS, the eastward flow of the SBC is interrupted by reversals, notably near Albany, between Cape Carnot and Cape Jaffa, and west of Tasmania (Fig.\,\ref{f03_fig1_}a). In MOM01, on the other hand, the SBC flow continuously eastward (Fig.\,\ref{f03_fig1_}c). Overall, the SBCs' magnitude and width agree well between the CARS and MOM01.
